--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
     "expo": "~51.0.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -18,8 +20,7 @@
     "react-native-screens": "^3.32.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^1.2.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-navigation-tabs": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
